# cricket-eda-tool

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: __init__.py  config.py
backend/agent/: graph.py  llm.py  prompts.py  tools.py
backend/api/: main.py  schemas.py
backend/api/routes/: feedback.py  history.py  query.py
backend/db/: __init__.py  duckdb_client.py  models.py  postgres.py
docker/: Dockerfile.backend
etl/: __init__.py  download.py  load.py  parse.py  pipeline.py  transform.py
