[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Explicitly tell hatchling which directories to include as packages.
# Our two top-level Python packages are `backend` and `etl`.
packages = ["backend", "etl"]

[project]
name = "cricket-eda"
version = "0.1.0"
description = "Cricket EDA Tool — Natural Language Analytics over Cricsheet Data"
requires-python = ">=3.11"
dependencies = [
    # Backend
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",

    # Database
    "duckdb>=0.10.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",

    # LLM / Agent
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langgraph>=0.0.30",
    "langchain-openai>=0.0.8",   # also works as base for ollama-compatible APIs

    # ETL
    "httpx>=0.27.0",
    "polars>=0.20.0",
    "pyarrow>=15.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
cricket-etl = "etl.pipeline:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
